@@ -7,10 +7,16 @@ import java.util.List;
 public class AssegnazionePrimaLibera implements StrategiaAssegnazione {
     @Override
     public Postazione selezionaPostazione(List<Postazione> postazioniDisponibili) {
+        /**
+         * @param postazioniDisponibili lista di postazioni GIA' verificate come libere
+         *        nell'istante della chiamata;
+         *        (in GestorePrenotazioni ciò avviene ricalcolandola dentro il blocco synchronized).
+         *        Non è thread-safe
+         */
         if (postazioniDisponibili == null || postazioniDisponibili.isEmpty()) {
             return null;
         }
         // Restituisce la prima postazione libera che incontra nell'elenco
-        return postazioniDisponibili.get(0);
+        return postazioniDisponibili.getFirst();
     }
 }
